[package]
name = "cmvp-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
